--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: gt_textfield
 description: A comprehensive Flutter text field package with MasterTextField (advanced TextField/TextFormField wrapper) and SuggestionTextField with autocomplete and search history.
 version: 1.0.0
-homepage: https://github.com/user/gt_textfield
-repository: https://github.com/user/gt_textfield
-issue_tracker: https://github.com/user/gt_textfield/issues
+homepage: https://github.com/GauravTechnical24/gt_textfield.git
+repository: https://github.com/GauravTechnical24/gt_textfield.git
+issue_tracker: https://github.com/GauravTechnical24/gt_textfield/issues
 
 topics:
   - textfield
